0.2-BETA (#11)
* Added project list events.

* Fixed an error that appeared when a NOP out of bounds is executed.

* Simulation to MIPSSimulation

* Added all trap instructions.

* Added xor and xori instructions.

* Fixed a bug that prevented plugins to load external project types.

* Updated Copyright. Code cleanup.

* Fixed small annotation error.

* Code highlighting speed improvements.

* Generalized files to assemble and editor holder.

* Added search node.

* Macro support for external assemblers. Search bar improvements. Fixed spanish typos.

* Fixed a bug that prevented out files to be omitted in a ProjectFolderExplorer.

* Changed MIPS menu name to "Simulation". This allows to external simulators to use this menu.

* Added replace top bar first version.

* Fixed a bug that located address references in the wrong position when the user selects "Show in the instruction visualizer"

* Added macros to the autocompletion popup. Now the autocompletion popup scales with the editor.

* Renamed autocompletion refresh instruction.

* Finished replace menu. Generalized assemble action for external assemblers.

* Generalizing simulation code, allowing external simulators to reuse code.

* Optimizing some simulation configuration code.

* Fixed ExecutionButtons javadoc.

* Added draggable list cell.

* Added support for indexed files in the assembler, allowing changing the order of the assembly.

* Added support in the Configuration for classes extending Map and List.

* Added java arguments support. This allows to load external plugins via java arguments.

* Fixed range integer value editor value get.

* Added dark-2-bold-button.

* Added option to DraggableListCell for making cells non-draggable.

* Moved saved action to the general editor region. This allows non-text editors to use it.

* Generalized FolderActionNewAssemblyFile.

* Made PopupWindowHelper public, allowing plugins to use it.

* Added file